# aiter-timeouts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  impl.py  pyproject.toml
.github/workflows/: ci.yaml
aiter_timeouts/: __init__.py
tests/: test_timeout.py
