[project]
name = "aiter-timeouts"
version = "1.1.0"
description = "Timeout functionality for asynchronous iterators"
authors = [
    {name = "Elias Gabriel", email = "me@eliasfgabriel.com"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.7"
dependencies = []

[project.urls]
documentation = "https://github.com/thearchitector/aiter-timeouts"
repository = "https://github.com/thearchitector/aiter-timeouts"
changelog = "https://github.com/thearchitector/aiter-timeouts/blob/main/CHANGELOG.md"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
addopts = "-svv"
testpaths = [ "tests" ]

[tool.mypy]
strict = true

[tool.pyright]
ignore = [ "tests" ]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
